--- a/outlines.css
+++ b/outlines.css
@@ -1,7 +1,7 @@
 html,
 body {
   margin: 0;
-  font-family: "Arial", sans-serif;
+ font-family: 'Caveat', cursive;
   font-size: 14px;
   line-height: 20px;
 }
