--- a/outlines.css
+++ b/outlines.css
@@ -1,7 +1,7 @@
 html,
 body {
   margin: 0;
- font-family: 'Caveat', cursive;
+  font-family: "Caveat", "Montserrat", " Helvetica","Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
