--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ p {
 body {
   margin: 0;
   min-width: 960px;
-  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+  font-family: "Caveat", "Montserrat", " Helvetica","Arial", sans-serif;
   font-size: 16px;
   line-height: 32px;
   color: #7CFC00;
